--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h3>The following are my qualities:</h3>
     <ul>
         <li>Problem solving</li>
-        <li>Bad at Communication skills</li>
+        <li>A fast typer</li>
         <li>A good programmer</li>
         <li>Techie</li>
     </ul>
